# podcast-transcript

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  pyproject.toml
.beads/: issues.jsonl
src/podcast_transcript/: __init__.py  backends.py  config.py  single_track.py
tests/: audio_test.py  cli_test.py  config_test.py  conftest.py  services_test.py  single_track_test.py
