[project]
name = "podcast-transcript"
version = "0.1.2"
description = "Just a simple podcast transcript generator"
readme = "README.md"
authors = [
    { name = "Jochen Wersdörfer", email = "jochen@wersdoerfer.de" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "mlx-whisper",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/podcast_transcript"]

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_transcript"]

[tool.uv]
dev-dependencies = [
    "mypy>=1",
    "pytest-mock>=3",
    "pytest>=8",
]

[project.scripts]
transcribe = "podcast_transcript:transcribe_cli"

